[gd_scene load_steps=8 format=3 uid="uid://cbil5ndxx8jop"]

[ext_resource type="Script" uid="uid://8ymff8mt5h64" path="res://objects/player.gd" id="1_gndvh"]
[ext_resource type="PackedScene" uid="uid://crudnplev28np" path="res://objects/heli-attack/weapons/Pistol.tscn" id="2_6vqvp"]
[ext_resource type="AudioStream" uid="uid://gs13hpg6x7c0" path="res://sounds/robot_jump.wav" id="3_f6j3j"]
[ext_resource type="AudioStream" uid="uid://c52um5ycfub4w" path="res://sounds/robot_land.wav" id="4_seukq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u8t0g"]
radius = 0.33
height = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tidn2"]
albedo_color = Color(0.735357, 0.735357, 0.735357, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tidn2"]
material = SubResource("StandardMaterial3D_tidn2")
radius = 0.33
height = 1.5

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_gndvh")
weapon_scenes = Array[PackedScene]([ExtResource("2_6vqvp")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_u8t0g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
mesh = SubResource("CapsuleMesh_tidn2")

[node name="WeaponPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="WeaponSocket" type="Node3D" parent="WeaponPivot"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)

[node name="SoundFX" type="Node" parent="."]

[node name="JumpSound" type="AudioStreamPlayer3D" parent="SoundFX"]
stream = ExtResource("3_f6j3j")
volume_db = 1.0

[node name="LandingSound" type="AudioStreamPlayer3D" parent="SoundFX"]
stream = ExtResource("4_seukq")
volume_db = 1.0
